# wordle

./: README.MD  main.py  pyproject.toml  words.py  words.txt
