[tool.poetry]
name = "wordle"
version = "0.1.0"
description = "Attempt at a version of wordle"
authors = ["Casey Mockbee <caseymockbee97@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
argparse = "^1.4.0"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
